# sdl3_test_chess_app

./: .gitignore  CMakeLists.txt  README.md
include/chess_app/: app.h  network_discovery.h  network_peer.h  network_protocol.h  network_session.h  network_tcp.h  render_board.h
src/: app.c  main.c
src/network/: discovery.c  peer.c  session.c  tcp.c
src/render/: board.c
